--- a/index.html
+++ b/index.html
@@ -17,12 +17,17 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#about">About Us</a></li>
-                    <li><a href="#admission">Admission</a></li>
-                    <li><a href="#facilities">Facilities</a></li>
+                    <li><a href="index.html#home">Home</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li class="dropdown"><a href="#">Academic</a>
+                        <ul class="dropdown-menu">
+                            <li><a href="admission.html">Admission</a></li>
+                            <li><a href="faculty.html">Faculty</a></li>
+                            <li><a href="facilities.html">Facilities</a></li>
+                        </ul>
+                    </li>
                     <li><a href="#" id="mandatoryNav">Mandatory Public Disclosure</a></li>
-                    <li><a href="#contact">Contact Us</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
                 </ul>
             </nav>
         </div>
@@ -86,7 +91,7 @@
     <img src="images/dasara event.jpg" alt="Dasara Event Celebration">
     <img src="images/ganesh idol.jpg" alt="Ganesh Idol Making">
     <img src="images/ganesh soil idol.jpg" alt="Ganesh Soil Idol Creation">
-    <img src="images/newspaper.jpg" alt="School in Newspaper">
+
     <img src="images/radhakrishna.jpg" alt="Radha Krishna Event">
     <img src="images/science 2.jpg" alt="Science Activity 2">
     <img src="images/science exebition1.jpg" alt="Science Exhibition 1">
@@ -97,25 +102,8 @@
     <section id="admission" class="admission-section container">
         <h2>Admissions Open</h2>
         <p>Enroll now for the 2025-26 academic year! For more information, contact us or visit the school.</p>
-        <form id="admissionForm">
-            <input type="text" name="name" placeholder="Your Name" required>
-            <input type="tel" name="phone" placeholder="Phone Number" required pattern="[0-9]{10}">
-            <input type="email" name="email" placeholder="Email Address" required>
-            <select name="class" required>
-                <option value="">Select Class</option>
-                <option>Pre-Nursery</option>
-                <option>Nursery</option>
-                <option>LKG</option>
-                <option>UKG</option>
-                <option>Grade-I</option>
-                <option>Grade-II</option>
-                <option>Grade-III</option>
-                <option>Grade-IV</option>
-                <option>Up to Grade 8th</option>
-            </select>
-            <button type="submit" class="btn">Submit</button>
-        </form>
-        <div id="formMessage"></div>
+        <img src="images/phamplent.jpeg" alt="School Pamphlet" style="width: 100%;">
+
     </section>
     <section id="contact" class="contact-section container">
         <h2>Contact Us</h2>
@@ -123,32 +111,31 @@
         <p><strong>Phone:</strong> <a href="tel:9071014999">907 101 4999</a>, <a href="tel:9071024999">907 102 4999</a>, <a href="tel:9071034999">907 103 4999</a></p>
         <p><strong>UDISE Code:</strong> 29060817306</p>
         <div class="social-media">
-            <a href="#"><img src="images/facebook.svg" alt="Facebook"></a>
-            <a href="#"><img src="images/instagram.svg" alt="Instagram"></a>
-            <a href="#"><img src="images/twitter.svg" alt="Twitter"></a>
-            <a href="#"><img src="images/youtube.svg" alt="YouTube"></a>
+            <a href="https://www.facebook.com/PATILACADEMYSINDHANUR/" target="_blank" title="Facebook"><img src="images/facebook.svg" alt="Facebook"></a>
+            <a href="https://www.instagram.com/rcpatilnss/" target="_blank" title="Instagram"><img src="images/instagram.svg" alt="Instagram"></a>
+            <a href="https://wa.me/9743311543" target="_blank" title="WhatsApp"><img src="images/whatsapp.svg" alt="WhatsApp"></a>
+            <a href="https://www.youtube.com/@patilacademysindhanur8263" target="_blank" title="YouTube"><img src="images/youtube.svg" alt="YouTube"></a>
         </div>
-        <div class="qr-code">
-            <img src="images/qr.png" alt="QR Code for Admission Info">
-        </div>
+
     </section>
     <footer>
         <div class="container footer-flex">
             <div>
-                <p>&copy; 2025 Patil Primary School, Sindhanur. All Rights Reserved.</p>
+                <p>&copy; Patil Primary School, Sindhanur 584128 | Developed by Mr. Shyamsundar Badiger</p>
             </div>
             <div class="footer-links">
-                <a href="#home">Home</a>
-                <a href="#about">About</a>
-                <a href="#admission">Admission</a>
-                <a href="#facilities">Facilities</a>
-                <a href="#contact">Contact</a>
+                <a href="index.html#home">Home</a>
+                <a href="about.html">About Us</a>
+                <a href="admission.html">Admission</a>
+                <a href="faculty.html">Faculty</a>
+                <a href="facilities.html">Facilities</a>
+                <a href="contact.html">Contact Us</a>
             </div>
             <div class="footer-social">
-                <a href="#"><img src="images/facebook.svg" alt="Facebook"></a>
-                <a href="#"><img src="images/instagram.svg" alt="Instagram"></a>
-                <a href="#"><img src="images/twitter.svg" alt="Twitter"></a>
-                <a href="#"><img src="images/youtube.svg" alt="YouTube"></a>
+                <a href="https://www.facebook.com/PATILACADEMYSINDHANUR/" target="_blank" title="Facebook"><img src="images/facebook.svg" alt="Facebook"></a>
+                <a href="https://www.instagram.com/rcpatilnss/" target="_blank" title="Instagram"><img src="images/instagram.svg" alt="Instagram"></a>
+                <a href="https://wa.me/9743311543" target="_blank" title="WhatsApp"><img src="images/whatsapp.svg" alt="WhatsApp"></a>
+                <a href="https://www.youtube.com/@patilacademysindhanur8263" target="_blank" title="YouTube"><img src="images/youtube.svg" alt="YouTube"></a>
             </div>
         </div>
     </footer>
