--- a/index.html
+++ b/index.html
@@ -5,15 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Patil Primary School, Sindhanur</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="advanced-tabs.css">
+    <link rel="stylesheet" href="mobile-responsive.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,600&display=swap" rel="stylesheet">
     <script defer src="script.js"></script>
 </head>
 <body>
+
     <header>
         <div class="container nav-flex">
             <div class="logo">
-                <img src="images/logo.jpeg" alt="Patil Primary School Logo">
-                <span>PATIL PRIMARY SCHOOL<br><small>(Montessori Bala Mandira)</small></span>
+                <img src="images/logo.jpg" alt="Patil Primary School Logo">
+                <span>
+  <span class="patil-title">PATIL</span>
+  <span class="primary-title">Primary School</span>
+  <span class="montessori-title">Montessori Bala Mandira</span>
+</span>
             </div>
             <nav>
                 <ul>
@@ -26,29 +33,25 @@
                             <li><a href="facilities.html">Facilities</a></li>
                         </ul>
                     </li>
-                    <li><a href="#" id="mandatoryNav">Mandatory Public Disclosure</a></li>
+                    <li><a href="mandatory.html">Mandatory Public Disclosure</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
                 </ul>
             </nav>
         </div>
     </header>
     <section class="hero" id="home">
+  <div class="hero-slider-wrapper">
     <div class="hero-slider">
-    <img class="slide active" src="images/agriculture.jpg" alt="Agriculture Activity">
-    <img class="slide" src="images/dasara event.jpg" alt="Dasara Event Celebration">
-    <img class="slide" src="images/ganesh idol.jpg" alt="Ganesh Idol Making">
-    <img class="slide" src="images/science exebition1.jpg" alt="Science Exhibition 1">
-    <img class="slide" src="images/radhakrishna.jpg" alt="Radha Krishna Event">
-    <img class="slide" src="images/culture.jpg" alt="School Culture Activity">
-    <img class="slide" src="images/rama navami.jpg" alt="Rama Navami Celebration">
-</div>
-    <div class="hero-content">
-        <h1>Admissions Open for 2025-26</h1>
-        <p>Empowering Young Minds from Pre-Nursery to Grade 8th</p>
-        <a href="#admission" class="btn">Apply Now</a>
+      <img class="slide active" src="event galary/slide1.jpeg" alt="slide1">
     </div>
+  </div>
+  <div class="hero-content">
+    <h1 class="hero-title-adv">Admissions Open for 2025-26</h1>
+    <p class="hero-subtitle-adv">Empowering Young Minds from Pre-Nursery to Grade 8th</p>
+  </div>
+  
 </section>
-    <section id="about" class="about-section container">
+        <section id="about" class="about-section container">
         <h2>About Us</h2>
         <p>Located at K.V. Compound Gangavathi Road, Sindhanur, Patil Primary School (Montessori Bala Mandira) is dedicated to nurturing young minds with modern teaching methods and a focus on all-round development. We are proud partners of Eupheus Learning and Century 21 Learning.</p>
         <ul class="highlights">
@@ -91,40 +94,36 @@
     <img src="images/dasara event.jpg" alt="Dasara Event Celebration">
     <img src="images/ganesh idol.jpg" alt="Ganesh Idol Making">
     <img src="images/ganesh soil idol.jpg" alt="Ganesh Soil Idol Creation">
-
-    <img src="images/radhakrishna.jpg" alt="Radha Krishna Event">
     <img src="images/science 2.jpg" alt="Science Activity 2">
     <img src="images/science exebition1.jpg" alt="Science Exhibition 1">
     <img src="images/science.jpg" alt="Science Activity">
     <img src="images/vignan2025.jpg" alt="Vignan 2025 Event">
+    <img src="event galary/culturegroup.jpeg" alt="culture" >
 </div>
-    </section>
-    <section id="admission" class="admission-section container">
+</section>
+<div style="text-align:center; margin-top:1.5rem;">
+    <a href="eventgallry.html" class="btn" style="display:inline-block;padding:0.7rem 2.2rem;background:#007bff;color:#fff;font-size:1.08rem;border-radius:7px;text-decoration:none;box-shadow:0 2px 8px rgba(0,123,255,0.07);margin-top:1rem;transition:background 0.2s;">Click here to Event Gallery</a>
+  </div>   
+<section id="admission" class="admission-section container">
         <h2>Admissions Open</h2>
         <p>Enroll now for the 2025-26 academic year! For more information, contact us or visit the school.</p>
         <img src="images/phamplent.jpeg" alt="School Pamphlet" style="width: 100%;">
 
     </section>
+    
     <section id="contact" class="contact-section container">
         <h2>Contact Us</h2>
         <p><strong>Address:</strong> K.V. Compound Gangavathi Road, SINDHANUR-584128</p>
         <p><strong>Phone:</strong> <a href="tel:9071014999">907 101 4999</a>, <a href="tel:9071024999">907 102 4999</a>, <a href="tel:9071034999">907 103 4999</a></p>
         <p><strong>UDISE Code:</strong> 29060817306</p>
-        <div class="social-media">
-            <a href="https://www.facebook.com/PATILACADEMYSINDHANUR/" target="_blank" title="Facebook"><img src="images/facebook.svg" alt="Facebook"></a>
-            <a href="https://www.instagram.com/rcpatilnss/" target="_blank" title="Instagram"><img src="images/instagram.svg" alt="Instagram"></a>
-            <a href="https://wa.me/9743311543" target="_blank" title="WhatsApp"><img src="images/whatsapp.svg" alt="WhatsApp"></a>
-            <a href="https://www.youtube.com/@patilacademysindhanur8263" target="_blank" title="YouTube"><img src="images/youtube.svg" alt="YouTube"></a>
-        </div>
-
     </section>
+   
     <footer>
         <div class="container footer-flex">
             <div>
                 <p>&copy; Patil Primary School, Sindhanur 584128 | Developed by Mr. Shyamsundar Badiger</p>
             </div>
             <div class="footer-links">
-                <a href="index.html#home">Home</a>
                 <a href="about.html">About Us</a>
                 <a href="admission.html">Admission</a>
                 <a href="faculty.html">Faculty</a>
@@ -132,40 +131,12 @@
                 <a href="contact.html">Contact Us</a>
             </div>
             <div class="footer-social">
-                <a href="https://www.facebook.com/PATILACADEMYSINDHANUR/" target="_blank" title="Facebook"><img src="images/facebook.svg" alt="Facebook"></a>
-                <a href="https://www.instagram.com/rcpatilnss/" target="_blank" title="Instagram"><img src="images/instagram.svg" alt="Instagram"></a>
-                <a href="https://wa.me/9743311543" target="_blank" title="WhatsApp"><img src="images/whatsapp.svg" alt="WhatsApp"></a>
-                <a href="https://www.youtube.com/@patilacademysindhanur8263" target="_blank" title="YouTube"><img src="images/youtube.svg" alt="YouTube"></a>
+                <a href="https://www.facebook.com/PATILACADEMYSINDHANUR/" target="_blank" title="Facebook"><img src="images/facebook-new.svg" alt="Facebook"></a>
+                <a href="https://www.instagram.com/rcpatilnss/" target="_blank" title="Instagram"><img src="images/instagram-new.svg" alt="Instagram"></a>
+                <a href="https://wa.me/9743311543" target="_blank" title="WhatsApp"><img src="images/whatsapp-new.svg" alt="WhatsApp"></a>
+                <a href="https://www.youtube.com/@patilacademysindhanur8263" target="_blank" title="YouTube"><img src="images/youtube-new.svg" alt="YouTube"></a>
             </div>
         </div>
     </footer>
-  <!-- Mandatory Public Disclosure Modal -->
-  <div id="mandatoryModal" class="modal">
-    <div class="modal-content">
-      <span class="close" id="closeMandatoryModal">&times;</span>
-      <h2>Mandatory Public Disclosure</h2>
-      <ul class="mandatory-list">
-        <li data-doc="society">Society</li>
-        <li data-doc="certificate">Certificate</li>
-        <li data-doc="smc">SMC</li>
-        <li data-doc="pta">PTA</li>
-        <li data-doc="academic-calendar">Academic Calendar</li>
-        <li data-doc="fee-structure">Fee Structure</li>
-        <li data-doc="self-certificate">Self Certificate</li>
-        <li data-doc="fire-safety">Fire Safety</li>
-        <li data-doc="drinking-water">Drinking Water</li>
-        <li data-doc="building-safety">Building Safety Certificate</li>
-        <li data-doc="state-registration">State Registration</li>
-        <li data-doc="noc">NOC</li>
-        <li data-doc="mandatory-disclosure">Mandatory Disclosure</li>
-        <li data-doc="affidavit">Affidavit</li>
-        <li data-doc="water-sample-test">Water Sample Test</li>
-        <li data-doc="land-certificate">Land Certificate</li>
-      </ul>
-      <div id="docViewer" class="doc-viewer">
-        <p>Select a document to view.</p>
-      </div>
-    </div>
-  </div>
 </body>
 </html>
