--- a/about.html
+++ b/about.html
@@ -5,13 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - Patil Primary School</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="advanced-tabs.css">
+    <link rel="stylesheet" href="mobile-responsive.css">
 </head>
 <body>
     <header>
         <div class="container nav-flex">
             <div class="logo">
-                <img src="images/logo.jpeg" alt="Patil Primary School Logo">
-                <span>PATIL PRIMARY SCHOOL<br><small>(Montessori Bala Mandira)</small></span>
+                <img src="images/logo.jpg" alt="Patil Primary School Logo">
+                <span>
+  <span class="patil-title">PATIL</span>
+  <span class="primary-title">Primary School</span>
+  <span class="montessori-title">Montessori Bala Mandira</span>
+</span>
             </div>
             <nav>
                 <ul>
@@ -24,7 +30,7 @@
                             <li><a href="facilities.html">Facilities</a></li>
                         </ul>
                     </li>
-                    <li><a href="#" id="mandatoryNav">Mandatory Public Disclosure</a></li>
+                    <li><a href="mandatory.html" id="mandatoryNav">Mandatory Public Disclosure</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
                 </ul>
             </nav>
@@ -41,7 +47,7 @@
         </ul>
         <div class="about-image-grid">
             <div class="about-image-item">
-                <img src="images/placeholder1.jpg" alt="Experienced & Caring Staff">
+                <img src="images/schoolfaculty.jpeg" alt="Experienced & Caring Staff">
                 <span>Experienced & Caring Staff</span>
             </div>
             <div class="about-image-item">
@@ -57,6 +63,29 @@
                 <span>Safe & Supportive Environment</span>
             </div>
         </div>
+
+        <!-- School Management Section -->
+        <section class="management-section">
+            <h3>School Management Members</h3>
+            <div class="management-grid">
+                <div class="management-member">
+                    <img src="images/president.jpg" alt="President" onerror="this.src='images/placeholder-profile.png'">
+                    <h4>Founder President</h4>
+                    <p class="member-name">[Sri. R. Pampapathi Patil]</p>
+                </div>
+                <div class="management-member">
+                    <img src="images/secratory.jpg" alt="Secretary" onerror="this.src='images/placeholder-profile.png'">
+                    <h4>Secretary</h4>
+                    <p class="member-name">[Sri.R C PATIL]</p>
+                </div>
+                <div class="management-member">
+                    <img src="images/administrator.jpeg" alt="Administrator" onerror="this.src='images/placeholder-profile.png'">
+                    <h4>Administrator</h4>
+                    <p class="member-name">[Smt.Bharathi Krishna]</p>
+                </div>
+            </div>
+        </section>
+        <!-- End School Management Section -->
     </main>
     <footer>
         <div class="container footer-flex">
