--- a/contact.html
+++ b/contact.html
@@ -5,13 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us - Patil Primary School</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="advanced-tabs.css">
+    <link rel="stylesheet" href="mobile-responsive.css">
 </head>
 <body>
     <header>
         <div class="container nav-flex">
             <div class="logo">
-                <img src="images/logo.jpeg" alt="Patil Primary School Logo">
-                <span>PATIL PRIMARY SCHOOL<br><small>(Montessori Bala Mandira)</small></span>
+                <img src="images/logo.jpg" alt="Patil Primary School Logo">
+                <span>
+  <span class="patil-title">PATIL</span>
+  <span class="primary-title">Primary School</span>
+  <span class="montessori-title">Montessori Bala Mandira</span>
+</span>
             </div>
             <nav>
                 <ul>
@@ -24,27 +30,49 @@
                             <li><a href="facilities.html">Facilities</a></li>
                         </ul>
                     </li>
-                    <li><a href="#" id="mandatoryNav">Mandatory Public Disclosure</a></li>
+                    <li><a href="mandatory.html" id="mandatoryNav">Mandatory Public Disclosure</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
                 </ul>
             </nav>
         </div>
     </header>
-    <main class="contact-section container">
+   
+    <main id="contact" class="contact-section container">
         <h2>Contact Us</h2>
         <p><strong>Address:</strong> K.V. Compound Gangavathi Road, SINDHANUR-584128</p>
         <p><strong>Phone:</strong> <a href="tel:9071014999">907 101 4999</a>, <a href="tel:9071024999">907 102 4999</a>, <a href="tel:9071034999">907 103 4999</a></p>
         <p><strong>UDISE Code:</strong> 29060817306</p>
         <div class="social-media">
-            <a href="https://www.facebook.com/PATILACADEMYSINDHANUR/" target="_blank" title="Facebook"><img src="images/facebook.svg" alt="Facebook"></a>
-            <a href="https://www.instagram.com/rcpatilnss/" target="_blank" title="Instagram"><img src="images/instagram.svg" alt="Instagram"></a>
-            <a href="https://wa.me/9743311543" target="_blank" title="WhatsApp"><img src="images/whatsapp.svg" alt="WhatsApp"></a>
-            <a href="https://www.youtube.com/@patilacademysindhanur8263" target="_blank" title="YouTube"><img src="images/youtube.svg" alt="YouTube"></a>
+            <a href="https://www.facebook.com/PATILACADEMYSINDHANUR/" target="_blank" title="Facebook"><img src="images/facebook-new.svg" alt="Facebook"></a>
+            <a href="https://www.instagram.com/rcpatilnss/" target="_blank" title="Instagram"><img src="images/instagram-new.svg" alt="Instagram"></a>
+            <a href="https://wa.me/9743311543" target="_blank" title="WhatsApp"><img src="images/whatsapp-new.svg" alt="WhatsApp"></a>
+            <a href="https://www.youtube.com/@patilacademysindhanur8263" target="_blank" title="YouTube"><img src="images/youtube-new.svg" alt="YouTube"></a>
         </div>
         <div class="qr-code qr-code-large">
             <img src="images/social-qr.png" alt="QR Code for All Social Media">
             <div class="qr-label">All Social Media</div>
         </div>
+
+         <!-- Motivational Quotations Section -->
+    <section id="motivations" class="motivations-section container">
+        <div class="motivations-list">
+    <div class="motivation-card">
+        <span class="quote-icon">“</span>
+        <p class="motivation-text">Education is the most powerful weapon which you can use to change the world.</p>
+        <span class="motivation-author">- Nelson Mandela</span>
+    </div>
+    <div class="motivation-card">
+        <span class="quote-icon">“</span>
+        <p class="motivation-text">The future belongs to those who believe in the beauty of their dreams.</p>
+        <span class="motivation-author">- Eleanor Roosevelt</span>
+    </div>
+    <div class="motivation-card">
+        <span class="quote-icon">“</span>
+        <p class="motivation-text">Success is not the key to happiness. Happiness is the key to success. If you love what you are doing, you will be successful.</p>
+        <span class="motivation-author">- Albert Schweitzer</span>
+    </div>
+</div>
+</section>
         <div class="pamphlet-container">
             <img src="images/phamplent.jpeg" alt="School Pamphlet">
         </div>
