--- a/faculty.html
+++ b/faculty.html
@@ -5,13 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Faculty - Patil Primary School</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="advanced-tabs.css">
 </head>
 <body>
     <header>
         <div class="container nav-flex">
             <div class="logo">
-                <img src="images/logo.jpeg" alt="Patil Primary School Logo">
-                <span>PATIL PRIMARY SCHOOL<br><small>(Montessori Bala Mandira)</small></span>
+                <img src="images/logo.jpg" alt="Patil Primary School Logo">
+                <span>
+  <span class="patil-title">PATIL</span>
+  <span class="primary-title">Primary School</span>
+  <span class="montessori-title">Montessori Bala Mandira</span>
+</span>
             </div>
             <nav>
                 <ul>
@@ -24,7 +29,7 @@
                             <li><a href="facilities.html">Facilities</a></li>
                         </ul>
                     </li>
-                    <li><a href="#" id="mandatoryNav">Mandatory Public Disclosure</a></li>
+                    <li><a href="mandatory.html" id="mandatoryNav">Mandatory Public Disclosure</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
                 </ul>
             </nav>
@@ -33,27 +38,18 @@
     <main class="faculty-section container">
         <h2>Our Faculty</h2>
         <p>Meet our dedicated and experienced teaching staff who are committed to providing quality education and nurturing every child's potential.</p>
+        <ul class="faculty-highlights">
+            <li><span class="faculty-icon">🌟</span> All teachers are highly qualified and passionate about early childhood and primary education.</li>
+            <li><span class="faculty-icon">🎓</span> Regular training and professional development ensure our faculty stays updated with the latest teaching methods.</li>
+            <li><span class="faculty-icon">🤝</span> Teachers focus on individual attention, nurturing each child's unique strengths and learning style.</li>
+            <li><span class="faculty-icon">🏆</span> Proven track record of academic excellence and holistic development.</li>
+            <li><span class="faculty-icon">💬</span> Open communication with parents to track and support student progress.</li>
+            <li><span class="faculty-icon">❤️</span> Caring, approachable, and supportive staff create a safe and happy learning environment.</li>
+        </ul>
         <div class="faculty-grid">
             <div class="faculty-card">
-                <img src="images/faculty1.jpg" alt="Head Master">
-                <div class="faculty-name">Head Master</div>
-                <div class="faculty-role">Mr./Ms. [Name]</div>
-            </div>
-            <div class="faculty-card">
-                <img src="images/faculty2.jpg" alt="School Staff 1">
-                <div class="faculty-name">School Staff</div>
-                <div class="faculty-role">Mr./Ms. [Name]</div>
-            </div>
-            <div class="faculty-card">
-                <img src="images/faculty3.jpg" alt="School Staff 2">
-                <div class="faculty-name">School Staff</div>
-                <div class="faculty-role">Mr./Ms. [Name]</div>
-            </div>
-            <div class="faculty-card">
-                <img src="images/faculty4.jpg" alt="School Staff 3">
-                <div class="faculty-name">School Staff</div>
-                <div class="faculty-role">Mr./Ms. [Name]</div>
-            </div>
+    <img src="images/schoolfaculty1.jpeg" alt="Faculty Group Photo">
+</div>
         </div>
     </main>
     <footer>
