--- a/facilities.html
+++ b/facilities.html
@@ -5,13 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Facilities - Patil Primary School</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="advanced-tabs.css">
+    <link rel="stylesheet" href="mobile-responsive.css">
 </head>
 <body>
     <header>
         <div class="container nav-flex">
             <div class="logo">
-                <img src="images/logo.jpeg" alt="Patil Primary School Logo">
-                <span>PATIL PRIMARY SCHOOL<br><small>(Montessori Bala Mandira)</small></span>
+                <img src="images/logo.jpg" alt="Patil Primary School Logo">
+                <span>
+  <span class="patil-title">PATIL</span>
+  <span class="primary-title">Primary School</span>
+  <span class="montessori-title">Montessori Bala Mandira</span>
+</span>
             </div>
             <nav>
                 <ul>
@@ -24,7 +30,7 @@
                             <li><a href="facilities.html">Facilities</a></li>
                         </ul>
                     </li>
-                    <li><a href="#" id="mandatoryNav">Mandatory Public Disclosure</a></li>
+                    <li><a href="mandatory.html" id="mandatoryNav">Mandatory Public Disclosure</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
                 </ul>
             </nav>
@@ -40,28 +46,40 @@
         </div>
         <div class="facility-photo-grid">
             <div class="facility-photo-item">
-                <img src="images/facility1.jpg" alt="Facility 1">
-                <span>Facility 1</span>
+                <img src="images/activity.jpeg" alt="Facility 1">
+                <span>Indoor Activities</span>
             </div>
             <div class="facility-photo-item">
-                <img src="images/facility2.jpg" alt="Facility 2">
-                <span>Facility 2</span>
+                <img src="images/classroom.jpeg" alt="Facility 2">
+                <span>Classroom</span>
             </div>
             <div class="facility-photo-item">
-                <img src="images/facility3.jpg" alt="Facility 3">
-                <span>Facility 3</span>
+                <img src="images/ganesh idol.jpg" alt="Facility 3">
+                <span>Play Ground</span>
             </div>
             <div class="facility-photo-item">
-                <img src="images/facility4.jpg" alt="Facility 4">
-                <span>Facility 4</span>
+                <img src="images/bus.png" alt="Facility 4">
+                <span>School Bus</span>
             </div>
             <div class="facility-photo-item">
-                <img src="images/facility5.jpg" alt="Facility 5">
-                <span>Facility 5</span>
+                <img src="images/students1.jpeg" alt="Facility 5">
+                <span>Safe Campus</span>
             </div>
             <div class="facility-photo-item">
-                <img src="images/facility6.jpg" alt="Facility 6">
-                <span>Facility 6</span>
+                <img src="images/agriculture.jpg" alt="Facility 6">
+                <span>Outdoor Activity</span>
+            </div>
+            <div class="facility-photo-item">
+                <img src="images/water.jpg" alt="Facility 6">
+                <span>Mineral water</span> 
+            </div>
+            <div class="facility-photo-item">
+                <img src="images/cctv.jpg" alt="Facility 6">
+                <span>CC TV surveillancee</span>
+            </div>
+            <div class="facility-photo-item">
+                <img src="images/green.jpg" alt="Facility 6">
+                <span>Green Campus</span>
             </div>
         </div>
     </main>
